--- a/5.ToyJS-Syntax/index.html
+++ b/5.ToyJS-Syntax/index.html
@@ -1,11 +1,30 @@
-<pre>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <title></title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <style>
+        #code {
+            border: 1px solid red;
+        }
+    </style>
+</head>
+
+<body>
+    <pre>
 对于编程语言来说，它的语法树的构造比声明式语言复杂得多。
 
 我们需要处理以下基本语法，同时也为后面的“运行时”做好准备。
 语句：运算符/优先级
 </pre>
 
-<pre>
+    <h2>演示代码</h2>
+    <pre id='code'></pre>
+
+    <h2>ToDo</h2>
+    <pre>
 var a = 1;
 
 a() + 10 * x;
@@ -23,5 +42,10 @@ function foo(x, y) {
 }
 </pre>
 
-<!-- <script src="LexParser.js"></script> -->
-<script type="module" src="SyntaxParser.js"></script>
+    <!-- <script src="LexParser.js"></script> -->
+    <!-- <script type="module" src="SyntaxParser.js"></script> -->
+    <script type="module" src="index.js"></script>
+
+</body>
+
+</html>
